<resources>
    <string name="app_name">优选社保</string>
    <string name="regist_hint_phone">请输入账号</string>
    <string name="regist_hint_password">输入密码</string>
    <string name="regist_hint_code">验证码</string>
    <string name="regist_hint_send">获取验证码</string>
    <string name="regist_hint_regist">注册</string>
    <string name="regist_hint_login">登录</string>
    <string name="short_news_title">众人保互联网有限公司</string>
    <string name="social_note">1. 办理社保卡一般在当月成功缴费后2-6个月出卡（不同地区时间不同），期间停保不能办理，办理成功后以邮寄方式寄送，邮费到付\n2. 从上家单位刚离职的人员，请在下单前确认原单位已经为您办理减员\n3. 此业务适于18岁至法定退休年龄之间的朋友\n4. 每年政府会调整社保缴费基数，我们会第一时间通知您</string>


    <string name="police_hourse_title_bar">买房</string>
    <string name="police_hourse_title">北京买房 - 社保必须连续缴纳满五年</string>
    <string name="police_hourse_top">\t\t\t\t在北京连续满五年（不能中断和补缴）纳税证明（指个人所得税）或者在北京连续满五年的社会保险证明，就可以在北京买房</string>
    <string name="police_hourse_content">\t\t\t\t连续5年缴纳社保的认证标准为：自提出申请上一个月须为正常参保状态。因工作调转延迟补缴社保与单位月报补缴社保累计超过三个月的，在购房资格审核中不予认可。\n\t\t\t\t1、自2012年12月18日起，补缴社保在购房资格审核中不予认可。购房者如果决定2016年买房，那么从2010年起，需连续在北京缴纳社保或每月纳税不为零。\n    \t\t\t\t2、有北京合法有效的暂住证，北京暂住证有效期为6个月，因此购房者买房时暂住证不能过期。\n    \t\t\t\t3、购房者在北京没有房屋，如果已经结婚，夫妻双方在北京没有房屋，外地人在北京限购一套住房。\n    \t\t\t\t4、身份证、结婚证和户口本。注意:如果在北京以外的地方贷款买过一套房，符合以上条件在北京再贷款买房，首付款要百分之六十以上，包括百分之六十，贷款利率上浮百分之十。</string>

    <string name="police_car_title_bar">买车</string>
    <string name="police_car_title">北京买车 - 社保必须连续缴纳满五年</string>
    <string name="police_car_top">\t\t\t\t根据《北京市小客车数量调控暂行规定》实施细则中规定，想在北京买车申请购车指标的人，必须持有有效的机动车驾驶证，且名下没有在北京市登记的小客车。</string>
    <string name="police_car_content">\t\t\t\t此外，还需满足以下5种身份之一：\n\t\t\t\t1、本市户籍人员\n\t\t\t\t2、驻京部队现役军人和现役武警\n\t\t\t\t3、持有有效身份证件并在京居住一年以上的港澳台居民、华侨及外籍人员\n\t\t\t\t4、持有有效《北京市工作居住证》的非本市户籍人员\n\t\t\t\t5、持有本市有效暂住证且连续五年(含)以上在本市缴纳社会保险和个人所得税的非本市户籍人员\n这意味着非京户籍的大陆在京居住者，如果没有暂住证、北京居住工作证或没有连续缴纳5年以上社保和个人所得税的个人将不能在京购买小客车。但是，如果遇到社保断缴怎么办呢其实，对于补缴社保，优选社保是可以解决的。在买车摇号方面，北京政策规定补交社保是可以的，不过不为北京社保中心接待的外地人必须找北京市社保代理公司补缴社保。2010年，北京市首次允许个人委托存档人员补缴社保。这个政策的制定初衷与“限购令”无关，也不是为了“照顾”北京户籍居民，而是为让一些基于“历史原因”间断缴费的特定人群补缴“欠”下的缴费年限，以提高退休后的养老待遇。这其中包括一些自谋职业、灵活就业的人员，也包括企业破产、难以找到单位补缴的人员等。那么，社保补缴的部分能有效吗？在北京市小客车指标调控管理信息系统网站上关于申请小客车指标办事指南的文件中写道：社保补交后有效，具体日期从申请的上一月开始往前推算60个月连续，不能断月，社保补缴有效（具体标准以当地社保中心和车管所为准）。补缴社保可以，买车补缴不一定可以通过购车审核。如果您也是外地来京人员，一定要注意社保不中断，如遇到离职等情况，欢迎咨询优选社保。</string>

    <string name="police_loacl_title_bar">落户</string>
    <string name="police_loacl_title">北京落户 - 社保必须连续缴纳满七年</string>
    <string name="police_loacl_top">\t\t\t\t按照《北京积分落户管理办法（试行）》，只有符合以下4个资格条件，才能在本市申请积分落户：1.持有北京市居住证2.在法定退休年龄以下3.在京连续缴纳社会保险满7年4.无刑事犯罪记录</string>
    <string name="police_loacl_content">\t\t\t\t积分获取详情如下：\n\t\t\t\t1、就业\n\t\t\t\t以连续缴纳社会保险年限作为合法稳定就业年限的计分标准，每连续缴纳社会保险满1年，+3分。\n\t\t\t\t2、住所\n\t\t\t\t在自有产权住所每连续居住满1年，+1分，在合法租赁住所和单位宿舍每连续居住满1年，+0.5分。\n\t\t\t\t3、学历\n\t\t\t\t大学专科(含高职) +10.5分大学本科学历并取得学士学位 +15分研究生学历并取得硕士学位 +26分研究生学历并取得博士学位 +37分　　学历(学位)的认定以申请人获得的最高学历(学位)为准，不累计。取得学历(学位)期间连续缴纳社会保险年限及连续居住年限的积分与学历(学位)积分不累计。\n\t\t\t\t4、职住\n\t\t\t\t你从城六区去其他区居住，每满1年加2分，最高+6分。　　就业和居住都去其他区，每满1年加4分，最高加+12分。\n\t\t\t\t5、创新　　\n\t\t\t\t科技、文化领域，或国家级奖项最高+12分，或本市奖项最高+6分，只计最高分，不累计加分。　　国新企业高管、核心技术人员，有持股、工资符合一定条件，工作每满1年+2分，最高加6分。创业企业投资就业，每满1年+2分，最高加6分。在经认定的科技企业孵化器及众创空间、技术转移服务公司、专业科技服务机构投资或就业，投资或就业每满1年+1分，最高加3分。上述创新创业指标各项加分不累计，同时符合多项加分条件的，只计最高分。\n\t\t\t\t6、缴税　　\n\t\t\t\t近3年连续纳税，且个人所得税纳税额年均10万及以上，或是企业老板，企业年均纳税20万及以上。+6分个人、企业法人和个体工商户经营者，申请积分落户的，有涉税违法行为记录的，每条记录-12分。\n\t\t\t\t7、年龄\n\t\t\t\t不超过45岁，+20分\n\t\t\t\t8、表彰\n\t\t\t\t如果你被评为省部级以上劳动模范;全国或首都道德模范;全国见义勇为英雄模范或首都见义勇为好市民。+20分\n\t\t\t\t9、守法\n\t\t\t\t被行政拘留处罚的，-30分。积分落户每年申请一次符合第四条规定的申请人，可向用人单位提交申请，由用人单位统一向有关部门申报。</string>

    <string name="police_school_title_bar">上学</string>
    <string name="police_school_title">至少需要3个月以上的社保连续缴纳记录</string>
    <string name="police_school_top">\t\t\t\t各个城区政策不同，均需父母一方社保连续缴纳记录。</string>
    <string name="police_school_content">\t\t\t\t对于非京籍的孩子在北京学。首先，需要满足五证要求，五证分别是：\n\t\t\t\t1、在京务工就业证明;\n\t\t\t\t2、在京实际住所证明;\n\t\t\t\t3、全家户口簿;\n\t\t\t\t4、在京暂住证;\n\t\t\t\t5、户籍所在地街道办或乡政府出具的在当地没有监护条件证明。\n\t\t\t\t同时，还要满足：工作地:双方或者一方(或监护人)在本区就业。居住地：本区自有住房或者租房(不得租用地下室、办公用房以及其他不可转租的房屋)。租房者需提供租赁合同，以及一年以上的租房完税证明。社保纳税：最近三个月在所在区内缴纳社保的证明。如果您是外地来京人员，一定要注意社保不中断，如遇到离职或者无处缴纳社保等情况，欢迎咨询优选社保。</string>

    <string name="during_month">月付</string>
    <string name="during_quarter">季付</string>
    <string name="during_half_year">半年付</string>
    <string name="during_year">年付</string>

    <string name="hourse_type_local_city">本市城镇职工</string>
    <string name="hourse_type_local_rural">本市农村劳动力</string>
    <string name="hourse_type_other_city">外埠城镇职工</string>
    <string name="hourse_type_other_rural">外埠农村劳动力</string>

    <string name="social_type_dishave">本市首次参保</string>
    <string name="social_type_have">续缴</string>
    <string name="social_search_log">点击访问可在手机端直接打开当前网址查询单击复制可复制网址信息，方便您分享或者其他方式打开</string>

    <string name="user_about_me">\t\t北京优选智嘉信息咨询有限公司由国内外资深HR及财务、法务专家创建，拥有专业化的人力资源服务体系、丰富的市场经验及完备的业务流程。秉承“创新高效，全心为你”的行业态度，做您身边的人力资源专家。我们运用互联网思维，依托互联网技术、坚定严谨的行业态度，积极改造、提升人力资源服务的广度及深度，涵盖人事代理、职称考评、创业孵化、市场调查、继续教育、财务外包、法律咨询、国外医疗（体检）服务、商业(补充医疗)保险等多重领域，努力成为互联网人力资源行业的开拓者与领导者。</string>

</resources>
