<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.justin.social.model.loginMode.LoginModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_login_title">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/backview"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:onClick="onBackClick"
                android:paddingLeft="18dp"
                android:scaleType="center"
                android:src="@drawable/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="登录"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/phone_ll"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/back_login_edit"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_login_aunt" />

            <EditText
                android:id="@+id/phone_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:hint="@string/regist_hint_phone"
                android:lines="1"
                android:textColor="@color/base_black1"
                android:textColorHint="@color/base_black1"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_ll"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/back_login_edit"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_password" />

            <EditText
                android:id="@+id/password_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:hint="@string/regist_hint_password"
                android:lines="1"
                android:textColor="@color/base_black1"
                android:textColorHint="@color/base_black1"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forget_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/password_ll"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:onClick="@{model.onForgetClick}"
            android:text="忘记密码"
            android:textColor="@color/base_green2" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="93dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/regist_hint_login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:loginBack="@{model.loginBackId}" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="25dp"
                android:text="还没有账号？"
                android:textColor="@color/base_black3"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                android:text="立即注册"
                android:layout_marginLeft="3dp"
                android:textColor="@color/base_green2"
                android:onClick="@{model.onRegistClick}"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>
</layout>
